css/styles.css
:root {/*CSS variables for element background, border, default boxShadow colors */
  --Page-backgroundColor: #cddeee;
  --Header-backgroundColor: #38598b;
  --Footer-backgroundColor: rgb(51, 66, 87);
  --ChartContent-barChart--odd-backgroundColor: #9f4b7a;
  --ChartContent-barChart--even-backgroundColor: #aeddcd;
  --Modal-backgroundColor: #28282b;
  --ChartContent-borderColor: black;
  --Page-boxShadowColor: black;
  --ChartContent-barChart-boxShadowColor: grey;
  /* for text colors */
  --Page-textColor: white;
  --Header-textColor: beige;
  --Modal-textColor: white;
  --section-config-height: 9em;
}

/* set margins and padding to default 0 and set box-sizing to border-box */

html {
  box-sizing: border-box;
}

*, *:before, *:after, li {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

/* style entire body, aka .Page */

.ChartContent-barChartContainer.is-forBaseChart::before {/* opacity: .1;
 */
  content: '';
  /* background: rgba(0,0,180,0.2);
 */
  background: rgba(175,100,55,0.5);
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  height: 100%;
  position: absolute;
}

.ChartContent-indicateBase {
  position: absolute;
  color: black;
  background: transparent;
  color: transparent;
  top: 5em;
  left: 60%;
  writing-mode: vertical-rl;
  text-orientation: upright;
  display: inline-block;
  margin: 0 auto;
  text-shadow: 3px 5px 3px black;
  z-index: 50;
}

.Configuration-showComparisons {
  background: lightcoral;
}

.Configure-baseSelect {/* height: 5em;
 *//* //height: 3em;
 *//* width: 110px;
 */
  height: 50px;
  border: 2px solid black;
  border-radius: .5em;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  padding: 4px;
  overflow-y: hidden;
  scroll-behavior: smooth;
}

.Configure-baseSelectControl {
  background: lightblue;
  display: flex;
  flex-direction: column;
  width: 19em;
  grid-area: selector;
}

.Configure-base {
  display: grid;
  grid-template-rows: 1fr 5fr;
  grid-template-columns: 1fr 1fr;
  grid-template-areas: "title title"
                      "filtered selector";
}

.Configure-baseHeading {
  grid-area: title;
  justify-self: center;
}

.Configure-baseFilterLabel {
  grid-area: filtered;
}

.Configure-baseFilter {
  max-width: 4em;
}

.Configure-baseScrollArrow {
  width: 4em;
  background-color: grey;
  height: 100%;
}

.Configure-baseScrollArrow.u-leftArrow {
}

.Configure-baseScrollArrow.u-rightArrow {
}

.Configure-baseSelect {
  font-size: 14px;
  list-style-type: none;
}

.Configure-reset, .Configure-comparisonsForm, .Configure-baseHeading,
.Configure-comparisonsHeading, .Configure-baseFilter {
  background: beige;
}

.Configure-baseOption {/* //display: inline-block;
 */
  display: inline-block;
  background: lightslategray;
  /* padding: .5em .5em .5em .5em;
 */
  min-height: 30px;
  margin-top: 2px;
  margin-bottom: 2px;
  border: 1px solid blue;
  border-radius: 3px;
}

.Configure-comparisonsSelect {
  height: 5em;
  border: 2px solid black;
  overflow-y: scroll;
  scroll-behavior: smooth;
  width: 22em;
  list-style-type: none;
  background: lightyellow;
}

.Configure-comparisonsSelect:hover {
  cursor: default;
}

.Configure-comparisonOption {
  padding: 0;
  margin: .3em;
  border: 1px solid transparent;
  list-style-type: none;
}

.Configure-selectedComparison {
  background: lightblue;
  border: 1px solid black;
  border-radius: 4px;
}

.Configure-showComparisons {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  background: green;
}

.Configure-showComparisons p:hover {
  cursor: help;
}

.Configure {
  font-size: 1em;
  height: var(--section-config-height);
  display: flex;
  justify-content: space-around;
  background-image: linear-gradient(to left, #ebf1f6 0%,#abd3ee 20%,#2ec3eb 71%,#d5ebfb 100%);
  color: black;
}

.Configure-showBase, .Configure-showComparisons, .Configure-showConfiguration {
  background: beige;
  /* align-self: center;
 */
  align-self: baseline;
}

.Configure * {
  font-size: 1em;
}

.Page {
  background: var(--Page-backgroundColor);
  height: 100vh;
  font-family: 'Nunito', sans-serif;
  font-weight: 400;
  color: var(--Page-textColor);
}

.Page-container {
  width: 80%;
  height: 100%;
  margin: 0 auto;
}

/* .Header as flex-box to be future-proof for next iterations */

.Header {
  height: 4em;
  background: var(--Header-backgroundColor);
  display: flex;
  justify-content: space-between;
}

.Header-title {
  font-weight: 400;
  font-size: 16px;
  color: var(--Header-textColor);
  text-transform: uppercase;
  align-self: center;
  padding-left: .5em;
}

/* .ChartContent::before {
  content: '';
  background: #ebf5f9;
  background-image: linear-gradient(to bottom, #ebf1f6 0%,#abd3ee 50%,#2ec3eb 51%,#d5ebfb 100%);
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: -1;
  display: block;
}
 */

.ChartContent {
  background: #ebf5f9;
  /* intended background for .CharContent */
  background-image: linear-gradient(to bottom, #ebf1f6 0%,#abd3ee 50%,#2ec3eb 51%,#d5ebfb 100%);
  display: flex;
  position: relative;
  justify-content: space-around;
  align-content: flex-end;
  /* height of header + footer = 9em */
  height: calc(100vh - 6em - var(--section-config-height));
  border: .5em solid var(--ChartContent-borderColor);
}

.ChartContent-barChartContainer {
  height: 100%;
  position: relative;
  display: flex;
}

.ChartContent-barChart {
  font-weight: 800;
  width: 7em;
  align-self: flex-end;
  border-radius: .5em .5em 0 0;
  border-color: var(--ChartContent-borderColor);
  border-style: solid;
  border-width: 9px 2px 0px 2px;
  box-shadow: 5px 1px 5px var(--ChartContent-barChart-boxShadowColor);
  /* barChart also a flex container, for controlling the positioning of its text */
  display: flex;
  padding-top: 5%;
  align-items: flex-start;
  justify-content: center;
  z-index: 75;
}

/* alternate background on barCharts from light background dark text to dark background light text */

.ChartContent-barChartContainer:nth-of-type(even) .ChartContent-barChart {
  background: var(--ChartContent-barChart--even-backgroundColor);
  color: black;
}

.ChartContent-barChartContainer:nth-of-type(odd) .ChartContent-barChart {
  background: var(--ChartContent-barChart--odd-backgroundColor);
}

/* custom modal instead of alert box, one modal absolute positioned per each ChartContent-container */

.Modal {
  color: var(--Modal-textColor);
  display: none;
  background-color: var(--Modal-backgroundColor);
  /* background: var(--Modal-backgroundColor);background-image: var(--Modal-backgroundColor);
 */
  opacity: 1;
  border-radius: .6em;
  position: absolute;
  left: -55%;
  top: 15em;
  width: 230px;
  height: 110px;
  margin: 0;
  box-shadow: 2px 3px 1px var(--Page-boxShadowColor);
  z-index: 70;
}

/* state of modal = display */

.Modal.is-displayed {/* make modal visible, and use flex to keep text centered consistently across screenwidth changes*/
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.Footer {
  height: 2em;
  padding-left: .5em;
  background: var(--Footer-backgroundColor);
  display: flex;
}

.Footer-copywrite {
  align-self: center;
}

.mediaSmallSize {
  height: 70%;
}

.mediaFullSize {
  width: 7em;
}

@media only screen and (max-width: 950px) {/*change orientetion of .ChartContent flex items on smaller screens, i.e. vertical to horizontal barCharts */

  .ChartContent-indicateBase {
    position: absolute;
    color: black;
    color: transparent;
    top: 30%;
    left: 60%;
    writing-mode: horizontal-tb;
    text-orientation: mixed;
    text-shadow: 3px 5px 3px black;
  }

  .ChartContent {
    flex-direction: column;
    justify-content: space-around;
  }

  .ChartContent-barChartContainer {
    width: 100%;
    height: inherit;
  }

  .ChartContent-barChart {/* since ChartContent-barCharts have INLINE hardcoded styling of height in html for default vertical charts, use !important to change height for this class in css stylesheet */
    height: 70%;
    justify-self: flex-end;
    align-self: center;
    border-radius: 0 .3em .3em 0;
    border-width: 2px 7px 2px 0px;
    font-size: 95%;
    justify-content: flex-start;
    align-items: center;
    padding-left: .5em;
    padding-top: 0;
  }/*modal is absolutely positioned to ChartContent-container, whose height and width have been changed on small screens*/

  .Modal {
    top: 0;
    left: 10%;
    height: 100%;
    width: 12em;
    align-items: center;
  }/*
   set width of barCharts to height (the originally hardcoded inline value), i.e. for switch from vertical to horizontal charts */
}

/* make acceptably responsive for extremely small-width screen devices */

@media only screen and (max-width:  320px) {
  .ChartContent-barChart {
    height: 100% !important;
    align-items: center;
    font-size: .9em;
    padding-top: 9%;
    padding-bottom: 5%;
  }

  .Footer, .Header-title {
    font-size: 70%;
  }
}

@media only screen and (max-width:  240px) {
  .ChartContent-barChart {
    font-size: .5em;
    padding-top: 5%;
  }
}

/* animations */

@keyframes flashText {
  0% {
    text-shadow: 3px 5px 3px black;
    /* text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; */
    color: transparent;
    background: transparent;
  }

  50% {/* //color: black;
 */
    color: grey;
    text-shadow: 3px 5px 10px orange, 5px 10px 3px black;
  }

  100% {
    text-shadow: 3px 5px 3px black;
    /* text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue; */
    color: transparent;
    background: transparent;
  }
}

@keyframes flashBackground {
  0% {
    background-color: blue ;
  }

  100% {
    background-color: green;
  }
}

.ChartContent-barChartContainer.is-forBaseChart:hover .ChartContent-indicateBase {
  animation: flashText 400ms normal forwards;
  animation-iteration-count: 2;
}

.ChartContent-barChartContainer.is-forBaseChart:hover .ChartContent-indicateBase::before {
  animation: flashBackground 400ms normal forwards;
  animation-iteration-count: 2;
}

@keyframes clearCharts {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.ChartContent--clearCharts .ChartContent-barChart {
  animation: clearCharts 2s normal forwards;
  animation-iteration-count: 1;
}

/* rotate modal while shrinking it and throwing a small shadow */

@keyframes disappearModal {
  0% {
    box-shadow: 5px 5px 5px grey;
  }

  100% {
    transform: rotate(380deg);
    height: 7%;
    width: 4%;
    font-size: 3px;
    box-shadow: 15px 15px 15px black;
  }
}

/* when modal activated on barchart click, activate 'disappearing modal' animation when user mouseoff barchart */

.ChartContent-barChart:not(:hover) .Modal {
  animation: disappearModal 800ms normal forwards;
  animation-iteration-count: 1;
}

